created users controller and routes
